--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,34 @@ body {
     font-weight: 700;
 }
 
+.section-featured-in {
+    padding: 4.8rem 0 3.2rem 0;
+}
+
+/* SECTION FEATURED IN */
+
+.heading-featured-in {
+    text-align: center;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    letter-spacing: 0.75px;
+    margin-bottom: 2.4rem;
+    font-weight: 500;
+    color: #888;
+}
+
+.logos {
+    display: flex;
+    justify-content: space-around;
+    /* make logo gray trick */
+    filter: brightness(0);
+    opacity: 0.5;
+}
+
+.logos img {
+    height: 3.2rem;
+}
+
 .section-how {
     padding: 9.6rem 0;
 }
