--- a/css/common.css
+++ b/css/common.css
@@ -55,9 +55,14 @@ body {
     color: #555;
 }
 
+strong {
+    font-weight: 500;
+}
+
 .container {
     width: 120rem;
     margin: 0 auto;
+    padding: 0 3.2rem;
 }
 
 .grid--cols-2 {
@@ -71,7 +76,7 @@ body {
 .grid {
     display: grid;
     row-gap: 9.6rem;
-    column-gap: 4.8rem;
+    column-gap: 6.4rem;
 }
 
 .grid-align-v {
@@ -82,6 +87,15 @@ body {
 
 .margin-right-sm {
     margin-right: 1.6rem !important;
+}
+
+
+.margin-bottom-md {
+    margin-bottom: 4.8rem;
+}
+
+.text-center {
+    text-align: center;
 }
 
 
@@ -150,4 +164,20 @@ body {
 .btn--outline:active {
     background-color: #fdf2e9;
     box-shadow: inset 0 0 0 3px #fff;
+}
+
+
+.link:link, .link:visited {
+    text-decoration: none;
+    color: #e67e22;
+    padding-bottom: 2px;
+    border-bottom: 1px solid currentColor;
+
+    transition: all 0.3s;
+    
+}
+
+.link:hover, .link:active {
+    color: #cf711f;
+    border-bottom: 1px solid transparent;
 }
