--- a/css/sections/testimonials.css
+++ b/css/sections/testimonials.css
@@ -2,7 +2,6 @@
     background-color: #fdf2e9;
     display: grid;
     grid-template-columns: 55fr 45fr;
-
 }
 
 .testimonials-container {
@@ -14,7 +13,6 @@
     row-gap: 4.8rem;
     column-gap: 8rem;
     grid-template-columns: 1fr 1fr;
-
 }
 
 .testimonial img {
@@ -32,4 +30,28 @@
 .testimonial-name {
     font-size: 1.6rem;
     color: #6f6f6f;
+}
+
+/* GALLERY */
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.6rem;
+    padding: 1.6rem;
+}
+
+.gallery img {
+    /* block -> to get rid of default inline spacing */
+    display: block;
+    width: 100%;
+    transition: all 0.4s;
+}
+
+.gallery-item {
+    overflow: hidden;
+}
+
+.gallery img:hover {
+    transform: scale(1.1);
 }
