--- a/css/sections/pricing.css
+++ b/css/sections/pricing.css
@@ -72,3 +72,33 @@
     text-align: center;
   
 }
+
+.plan-details {
+    font-size: 1.6rem;
+    line-height: 1.6;
+    text-align: center;
+}
+
+
+.feature-icon {
+    width: 3.2rem;
+    height: 3.2rem;
+    padding: 1.6rem;
+    background-color: #fdf2e9;
+    border-radius: 50%;
+    color: #cf711f;
+    margin-bottom: 3.2rem;
+}
+
+
+.feature-title {
+    font-size: 2.4rem;
+    font-weight: 700;
+    color: #333;
+    margin-bottom: 1.6rem;
+}
+
+.feature-description {
+    font-size: 1.8rem;
+    line-height: 1.8;
+}
