--- a/css/queries.css
+++ b/css/queries.css
@@ -54,3 +54,66 @@
         padding: 9.6rem 3.2rem;
     }
 }
+
+
+/* BELOW 944px (tablets) */
+
+@media(max-width: 59em) {
+    html {
+        font-size: 50%;
+    }
+
+    .hero {
+        grid-template-columns: 1fr;
+        gap: 6.4rem;
+    }
+
+    .hero-text-box, .hero-img-box {
+        text-align: center;
+    }
+
+
+    .hero-img {
+        width: 60%;
+    }
+
+    .delivered {
+        justify-content: center;
+        margin-top: 3.2rem;
+    }
+
+    .logos img {
+        height: 2.4rem;
+    }
+
+
+    .step-number {
+        font-size: 7.4rem;
+    }
+
+    .meal-content  {
+        padding: 2.4rem 3.2rem 3.2rem 3.2rem;
+    }
+
+    .section-testimonials {
+        grid-template-columns: 1fr;
+    }
+
+    .gallery {
+        grid-template-columns: repeat(6,1fr);
+    }
+
+    .cta {
+        grid-template-columns: 3fr 2fr;
+    }
+
+    .form-cta {
+        grid-template-columns: 1fr;
+    }
+
+    .form-btn {
+        margin-top: 1.2rem;
+    }
+
+
+}
