--- a/css/queries.css
+++ b/css/queries.css
@@ -1,4 +1,3 @@
-
 /* BELOW 1344px (small desktop sizes) */
 
 @media (max-width: 84em) {
@@ -13,8 +12,6 @@
     .gallery {
         grid-template-columns: repeat(2, 1fr);
     }
-
-   
 }
 
 /* BELOW 1200px (landscape Tablets) */
@@ -55,10 +52,9 @@
     }
 }
 
-
 /* BELOW 944px (tablets) */
 
-@media(max-width: 59em) {
+@media (max-width: 59em) {
     html {
         font-size: 50%;
     }
@@ -68,10 +64,10 @@
         gap: 6.4rem;
     }
 
-    .hero-text-box, .hero-img-box {
+    .hero-text-box,
+    .hero-img-box {
         text-align: center;
     }
-
 
     .hero-img {
         width: 60%;
@@ -86,12 +82,11 @@
         height: 2.4rem;
     }
 
-
     .step-number {
         font-size: 7.4rem;
     }
 
-    .meal-content  {
+    .meal-content {
         padding: 2.4rem 3.2rem 3.2rem 3.2rem;
     }
 
@@ -100,7 +95,7 @@
     }
 
     .gallery {
-        grid-template-columns: repeat(6,1fr);
+        grid-template-columns: repeat(6, 1fr);
     }
 
     .cta {
@@ -115,5 +110,53 @@
         margin-top: 1.2rem;
     }
 
+    .btn-mobile-nav {
+        display: block;
+    }
 
+    .main-nav {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        background-color: rgba(255, 255, 255, 0.96);
+
+        width: 100%;
+        height: 100vh;
+
+        /* Alternative to display:none */
+        opacity: 0;
+        pointer-events: none;
+        visibility: hidden;
+
+        transition: all 0.5s;
+
+        transform: translateX(100%);
+    }
+
+    .nav-open .main-nav {
+        opacity: 1;
+        pointer-events: auto;
+        visibility: visible;
+
+        transform: translateX(0);
+
+    }
+
+    .main-nav-list {
+        flex-direction: column;
+        gap: 4.8rem;
+    }
+
+    .nav-open .icon-mobile-nav[name='close-outline'] {
+        display: block;
+    }
+
+    .nav-open .icon-mobile-nav[name='menu-outline'] {
+        display: none;
+    }
 }
