--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -5,6 +5,8 @@
     background-color: #fdf2e9;
     height: 9.6rem;
     padding: 0 4.8rem;
+
+    position: relative;
 }
 
 .logo {
@@ -45,4 +47,24 @@
 .main-nav-link--cta:hover,
 .main-nav-link--cta:active {
     background-color: #cf711f;
+}
+
+.btn-mobile-nav {
+    border: none;
+    background: none;
+    cursor: pointer;
+    display: none;
+}
+
+
+
+.icon-mobile-nav {
+    width: 4.8rem;
+    height: 4.8rem;
+
+    color: #333;
+}
+
+.icon-mobile-nav[name='close-outline'] {
+    display: none;
 }
