--- a/css/common.css
+++ b/css/common.css
@@ -49,7 +49,7 @@ Default: 7px
 html {
     font-size: 62.5%;
 
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body {
@@ -58,7 +58,7 @@ body {
     font-weight: 400;
     color: #555;
 
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 strong {
