--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -9,6 +9,23 @@
     position: relative;
 }
 
+.sticky .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.97);
+    height: 8rem;
+    padding-top: 0;
+    padding-bottom: 0;
+    box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+    z-index: 999;
+}
+
+.sticky .section-hero {
+    margin-top: 9.6rem;
+  }
+
 .logo {
     height: 2.2rem;
 }
@@ -59,8 +76,6 @@
 
     z-index: 9999;
 }
-
-
 
 .icon-mobile-nav {
     width: 4.8rem;
