--- a/css/queries.css
+++ b/css/queries.css
@@ -123,7 +123,8 @@
         align-items: center;
         justify-content: center;
 
-        background-color: rgba(255, 255, 255, 0.96);
+        background-color: rgba(255, 255, 255, 0.6);
+        backdrop-filter: blur(10px);
 
         width: 100%;
         height: 100vh;
